--- a/src/components/Cta.astro
+++ b/src/components/Cta.astro
@@ -14,7 +14,7 @@ const {
 		<p class="text-lg mb-8">{subtitle}</p>
 
 		<div class="flex flex-col justify-center gap-4">
-			<a href="tel:6165551234" class="btn btn-primary text-lg py-2 w-full max-w-xs mx-auto ">
+			<a href="tel:616-315-0999" class="btn btn-primary text-lg py-2 w-full max-w-xs mx-auto ">
 				<Phone />
 				<p>Talk to a Pro</p>
 			</a>
@@ -38,7 +38,7 @@ const {
 			No pressure, no surprises.
 		</p>
 		<div class="flex flex-col justify-center gap-4">
-			<a href="tel:6165551234" class="btn btn-secondary text-base-content text-lg w-64 h-fit py-2 flex items-center justify-between mx-auto text-center">
+			<a href="tel:616-315-0999" class="btn btn-secondary text-base-content text-lg w-64 h-fit py-2 flex items-center justify-between mx-auto text-center">
 				<svg xmlns="http://www.w3.org/2000/svg" width={24} height={24} viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width={2} stroke-linecap="round" stroke-linejoin="round"
 					class="icon icon-tabler icons-tabler-outline icon-tabler-phone">
 					<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
