--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -63,7 +63,7 @@ import CalendarClock from './icons/CalendarClock.astro';
                     <PriceReceipt />
                     <p>Get My Instant Quote</p>
                 </a>
-                <a href="tel:6165551234" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
+                <a href="tel:616-315-0999" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
                     <Phone />
                     <p>Talk to a Pro</p>
                 </a>
