--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -23,7 +23,7 @@ const faqs = [
 	},
 	{
 		question: "What’s the difference between standard, power vent, hybrid, and tankless water heaters?",
-		answer: `<span class="font-semibold">Standard tank water heaters</span> use either electric or gas to heat the water. The gas version vents the exhaust through a chimney or metal flue using a natural draft—no fans, just the fact that heat rises. The electric version has no venting needs but rather heats an electric element inside the tank (similar to an electric oven) and costs more to operate.  These are typically the cheapest to install but the least efficient and cost the most to operate long term.
+		answer: `<span class="font-semibold">Standard tank water heaters</span> use either electric or gas to heat the water. The gas version vents the exhaust through a chimney or metal flue using a natural draft — no fans, just the fact that heat rises. The electric version has no venting needs but rather heats an electric element inside the tank (similar to an electric oven) and costs more to operate.  These are typically the cheapest to install but the least efficient and cost the most to operate long term.
 			<br/><br/>
 			<span class="font-semibold">Power vent tank water heaters</span> do the same job but use a fan to push exhaust out of the home through a PVC pipe. It's slightly more efficient but much more flexible for installation location since it vents with PVC. They cost more upfront than natural-draft water heaters and require a standard outlet nearby (to power the exhaust fan), but offer mediocre savings compared to the standard natural-draft gas water heater tanks. So think of it as a convenience upgrade, not an energy saver.
 			<br/><br/>
@@ -33,9 +33,9 @@ const faqs = [
 	},
 	{
 		question: "Why do I need a photo or video call to narrow down my price range?",
-		answer: `Because we really want your quote to be right. A quick video call or brief site visit helps us confirm what your home needs—and what it doesn't—for a safe, code-compliant installation at the lowest price possible. Every home's plumbing setup is a little different. For example, we'll check whether you have things like a chimney liner, drain pan, expansion tank, proper shutoff valves, recirulation pump, etc.
+		answer: `Because we really want your quote to be right. A quick video call or brief site visit helps us confirm what your home needs — and what it doesn't — for a safe, code-compliant installation at the lowest price possible. Every home's plumbing setup is a little different. For example, we'll check whether you have things like a chimney liner, drain pan, expansion tank, proper shutoff valves, recirulation pump, etc.
 			<br/><br/>
-			These details make sure your new water heater will operate safely, meet code, and last as long as possible. It’s a simple check before we start work—no salesperson, just a technician making sure everything’s clear for launch. We often have the right water heater on the truck and can do the install right then and there if you’re ready to go.`
+			These details make sure your new water heater will operate safely, meet code, and last as long as possible. It’s a simple check before we start work — no salesperson, just a technician making sure everything’s clear for launch. We often have the right water heater on the truck and can do the install right then and there if you’re ready to go.`
 	},
 	{
 		question: "How do I know if I need a new water heater?",
@@ -69,7 +69,7 @@ const faqs = [
 	},
 	{
 		question: "Will I be without hot water during the install?",
-		answer: `Yes, but only briefly. We’ll disconnect your old unit and install the new one the same day. Hot water is typically restored within a few hours of arrival so you can move on with your day (after a hot shower, of couse).`
+		answer: `Yes, but only briefly. We’ll disconnect your old unit and install the new one the same day. Hot water is typically restored within a few hours of arrival so you can move on with your day (after a hot shower, of course).`
 	},
 	{
 		question: "Do you dispose of the old water heater?",
