--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import PriceReceipt from '../components/icons/PriceReceipt.astro';
+import Phone from '../components/icons/Phone.astro';
 
 const metadata = {
   title: `Oops! - This isn't ready yet...`,
@@ -17,10 +19,15 @@ const metadata = {
       <span class="mb-8 text-center text-primary">Oops! We're still working on this page, but our phone is on!</span>
       <p class="text-2xl text-center text-primary">Call <a aria-label="call 616-315-0999" href="tel:616-315-0999" class="underline">616-315-0999</a></p>
       <p class="text-2xl text-center text-primary mb-8">Getting a new water heater is a breeze with the Water Heater Replacement Company.</p>
-      <h2 class="mb-8 font-bold text-6xl">
-        <span class="sr-only">Error</span>
-        <span class="text-primary">404</span>
-      </h2>
+      <span class="sr-only">Error</span>
+      <a href="/instant-quote/?step=1" class="btn btn-primary text-lg text-white py-2 w-64 max-w-xs mx-auto mb-4">
+          <PriceReceipt />
+          <p>Get An Instant Quote</p>
+      </a>
+      <a href="tel:616-315-0999" class="btn btn-outline text-lg bg-white/50 text-black py-2 w-64 max-w-xs mx-auto mb-4 shadow-sm">
+          <Phone />
+          <p>Talk to a Pro</p>
+      </a>
 </div>
   </section>
 </BaseLayout>
