Fix emdash spacing

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -24,7 +24,7 @@ const { showNavigation = true } = Astro.props;
                 <div class="navbar-center hidden lg:flex justify-between">
                     <ul class="menu menu-horizontal px-1 mr-4">
                         <li>
-                            <a aria-label="How It Works" href="/instant-quote/?step=1">Instant Quote</a>
+                            <a aria-label="How It Works" href="/#how-it-works">How It Works</a>
                         </li>
                         <li>
                             <a aria-label="pricing" href="/water-heater-pricing/">Water Heater Pricing</a>
