fix pricing disclaimer text

--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -77,8 +77,9 @@ const imageMap = {
 		))}
 	</div>
 
-	<p class="text-sm text-gray-500 mt-6">*Venting, electrical and gas line upgrades are where we run into the largest price changes but most requirements can usually be clarified via video call or home visit.</p>
-	<p class="text-sm text-gray-500 my-6">Final price is always provided by email or text before work begins.</p>
+	<p class="text-sm text-gray-500 mt-6">*Venting, electrical and gas line upgrades are where we run into the largest price changes.</p>
+	<p class="text-sm text-gray-500 my-2"> All requirements and costs can be confirmed via video call or home visit.</p>
+	<p class="text-sm text-gray-500 mb-6">Final price is always provided by email or text before work begins.</p>
 </section>
 
 <Cta />
