--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,7 +39,7 @@
 		<div>
 			<h4 class="font-semibold mb-4">Get in Touch</h4>
 			<ul class="space-y-2">
-				<li><a class="link link-hover" href="mailto:service@waterheaterreplacementcompany.com">service@WaterHeaterReplacementCompany.com</a></li>
+				<li><a class="link link-hover break-words whitespace-normal" href="mailto:service@waterheaterreplacementcompany.com">service@WaterHeaterReplacementCompany.com</a></li>
 				<li><a class="link link-hover" href="tel:+1-616-315-0999">(616) 315-0999</a></li>
 				<li><a class="link link-hover" href="/contact">Start a Project →</a></li>
 			</ul>
