--- a/src/layouts/InstantQuoteLayout.astro
+++ b/src/layouts/InstantQuoteLayout.astro
@@ -87,7 +87,7 @@ const metadata = {
 
 
 	<body class="bg-gradient-to-b from-primary/0 to-primary/5">
-		<Navigation showNavigation={false}/>
+		<Navigation showNavigation={true} />
 		<slot />
 		<!-- <Footer /> -->
 	</body>
