--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -73,7 +73,7 @@ const faqs = [
 	},
 	{
 		question: "Do you dispose of the old water heater?",
-		answer: `Yes. Unless you'd like to keep it as a memento, we always remove and dispose of your old water heater and clean up the area after every replacement. You won't even know we were there...well, it might actually be cleaner than it was.`
+		answer: `Yes. Unless you'd like to keep it as a memento, we always remove and dispose of your old water heater and clean up the area after every replacement. You won't even know we were there...well, it might actually be cleaner than it was before.`
 	},
 	{
 		question: "Is the work guaranteed?",
