--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,8 @@
 		<div>
 			<h3 class="font-semibold mb-4">Water Heater Replacement Company of Grand Rapids</h3>
 			<p class="mb-2 max-w-xs">
-				We specialize in fast, affordable water heater replacements for homeowners across West Michigan.
+				We specialize in fast, affordable water heater replacements and upgrades for homeowners across West Michigan.
 			</p>
-			<p class="text-xs text-base-content/70">© {new Date().getFullYear()} <a target="_blank" href="https://launchwebdesignandmarketing.com" class="underline">Launch Web Design & Marketing</a>. All rights reserved.</p>
 		</div>
 
 		<div>
@@ -20,16 +19,16 @@
 					<p class="pointer-events-none" aria-label="parent">Products</p>
 					<ul class="p-2">
 						<li>
-							<a aria-label="Tank Water Heaters" href="/products/tank-water-heaters/">Standard Tank Water Heaters</a>
+							<a class="link link-hover" aria-label="Tank Water Heaters" href="/products/tank-water-heaters/">Standard Tank Water Heaters</a>
 						</li>
 						<li>
-							<a aria-label="Power Vent Water Heaters" href="/products/power-vent-water-heaters/">Power Vent Water Heaters</a>
+							<a class="link link-hover" aria-label="Power Vent Water Heaters" href="/products/power-vent-water-heaters/">Power Vent Water Heaters</a>
 						</li>
 						<li>
-							<a aria-label="Tankless Water Heaters" href="/products/tankless-water-heaters/">Tankless Water Heaters</a>
+							<a class="link link-hover" aria-label="Tankless Water Heaters" href="/products/tankless-water-heaters/">Tankless Water Heaters</a>
 						</li>
 						<li>
-							<a aria-label="Heat Pump Water Heaters" href="/products/heat-pump-water-heaters/">Heat Pump Water Heaters</a>
+							<a class="link link-hover" aria-label="Heat Pump Water Heaters" href="/products/heat-pump-water-heaters/">Heat Pump Water Heaters</a>
 						</li>
 					</ul>
 				</li>
@@ -43,5 +42,8 @@
 				<li><a class="link link-hover" href="tel:+1-616-315-0999">(616) 315-0999</a></li>
 			</ul>
 		</div>
+			<p class="text-xs text-base-content/70">© {new Date().getFullYear()} <a target="_blank" href="https://launchwebdesignandmarketing.com" class="underline">Launch Web Design & Marketing</a>
+				<br>All rights reserved.
+			</p>
 	</div>
 </footer>
