--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -48,7 +48,7 @@ import MagnifyingGlass from './icons/MagnifyingGlass.astro';
 			<div class="card bg-base-200 border-1 border-base-300 p-6">
 				<h4 class="text-3xl font-bold text-primary mb-4">Step 4</h4>
 				<h5 class="text-xl font-semibold mb-2">Book Your Guaranteed Installation Date</h5>
-				<p class="mb-2">Choose a date that works for you — many installs are available next-day.</p>
+				<p class="mb-2">Choose a date that works for you — installs available as soon as today or next-day.</p>
 				<!-- <p class="text-sm text-gray-500">Happy with the price range and want to skip the video call? We’ll still confirm your price on-site before work begins.</p> -->
 			</div>
 
@@ -56,7 +56,7 @@ import MagnifyingGlass from './icons/MagnifyingGlass.astro';
 
 		</div>
 
-		<a href="/instant-quote/?step=1" class="btn btn-secondary text-lg w-full max-w-xs py-2 mx-auto">
+		<a href="/instant-quote/?step=1" class="text-white btn btn-secondary text-lg w-full max-w-xs py-2 mx-auto">
 			<PriceReceipt />
 			<p class="">Get My Instant Quote</p>
 		</a>
