update pricing model. remove venting questions

--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -23,7 +23,7 @@ const imageMap = {
 		<div class="grid md:grid-cols-2 gap-x-12 gap-y-2  text-left">
 			<ul class="space-y-2 list-disc pl-6">
 				<li>No hidden fees</li>
-				<li>Complete installation</li>
+				<li>Complete standard installation</li>
 				<li>All parts and labor</li>
 				<li>All utility connections</li>
 				<li>All venting materials</li>
@@ -45,8 +45,8 @@ const imageMap = {
 				<img src={imageMap[option.image].src} alt={option.title} class="w-full h-48 object-contain rounded-lg mb-4" />
 				<div class="flex-grow">
 					<h2 class="text-2xl font-semibold mb-2">{option.title}</h2>
-					<p class="text-lg font-bold text-primary">Starting at</p>
-					<p class="text-3xl sm:text-4xl font-bold text-primary mb-4">{option.price} <span class="text-2xl">installed</span></p>
+					{/* <p class="text-lg font-bold text-primary">Starting at</p> */}
+					{/* <p class="text-3xl sm:text-4xl font-bold text-primary mb-4">{option.price} <span class="text-2xl">installed</span></p> */}
 					{/* <p class="text-lg font-bold text-primary mb-4">Installed</p> */}
 					<ul class="list-disc list-inside text-left text-sm leading-relaxed space-y-1 mb-6">
 						{option.features.map(feature => (
@@ -77,8 +77,8 @@ const imageMap = {
 		))}
 	</div>
 
-	<p class="text-sm text-gray-500 mt-6">*Venting, electrical and gas line upgrades are where we run into the largest price changes.</p>
-	<p class="text-sm text-gray-500 my-2"> All requirements and costs can be confirmed via video call or home visit.</p>
+	<!-- <p class="text-sm text-gray-500 mt-6">*Venting, electrical and gas line upgrades are where we run into the largest price changes.</p> -->
+	<p class="text-sm text-gray-500 mt-6 my-2"> *All requirements and costs can be confirmed via video call or home visit.</p>
 	<p class="text-sm text-gray-500 mb-6">Final price is always provided by email or text before work begins.</p>
 </section>
 
