--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,23 +12,15 @@
 			<h4 class="font-semibold mb-4">Pages</h4>
 			<ul class="space-y-2">
 				<li><a class="link link-hover" href="/">Home</a></li>
-				<!-- <li><a class="link link-hover" href="/#frustrated-with-the-process">Frustrated With the Process?</a></li>
-				<li><a class="link link-hover" href="/#how-we-do-it-differently">We Do It Differently</a></li> -->
 				<li><a class="link link-hover" href="/pricing">Water Heater Pricing</a></li>
 				<li>
 					<p class="pointer-events-none" aria-label="parent">Products</p>
 					<ul class="p-2">
 						<li>
-							<a class="link link-hover" aria-label="Tank Water Heaters" href="/products/tank-water-heaters/">Standard Tank Water Heaters</a>
-						</li>
-						<li>
-							<a class="link link-hover" aria-label="Power Vent Water Heaters" href="/products/power-vent-water-heaters/">Power Vent Water Heaters</a>
+							<a class="link link-hover" aria-label="Tank Water Heaters" href="/products/tank-water-heaters/">Tank Water Heaters</a>
 						</li>
 						<li>
 							<a class="link link-hover" aria-label="Tankless Water Heaters" href="/products/tankless-water-heaters/">Tankless Water Heaters</a>
-						</li>
-						<li>
-							<a class="link link-hover" aria-label="Heat Pump Water Heaters" href="/products/heat-pump-water-heaters/">Heat Pump Water Heaters</a>
 						</li>
 					</ul>
 				</li>
