--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -32,11 +32,9 @@ const { showNavigation = true } = Astro.props;
                         <li>
                             <details id="desktop-products-menu">
                                 <summary>Products</summary>
-                                <ul class="p-2 w-64 top-6 right-0">
-                                    <li><a aria-label="Tank Water Heaters" href="/products/tank-water-heaters/">Standard Tank Water Heaters</a></li>
-                                    <li><a aria-label="Power Vent Water Heaters" href="/products/power-vent-water-heaters/">Power Vent Water Heaters</a></li>
+                                <ul class="p-2 w-64 top-6 right-0 z-50">
+                                    <li><a aria-label="Tank Water Heaters" href="/products/tank-water-heaters/">Tank Water Heaters</a></li>
                                     <li><a aria-label="Tankless Water Heaters" href="/products/tankless-water-heaters/">Tankless Water Heaters</a></li>
-                                    {/* <li><a aria-label="Heat Pump Water Heaters" href="/products/heat-pump-water-heaters/">Heat Pump Water Heaters</a></li> */}
                                 </ul>
                             </details>
                         </li>
@@ -80,11 +78,11 @@ const { showNavigation = true } = Astro.props;
                         <p class="pointer-events-none" aria-label="parent">Products</p>
                         <ul class="p-2">
                             <li>
-                                <a aria-label="Tank Water Heaters" href="/products/tank-water-heaters/">Standard Tank Water Heaters</a>
+                                <a aria-label="Tank Water Heaters" href="/products/tank-water-heaters/">Tank Water Heaters</a>
                             </li>
-                            <li>
+                            {/* <li>
                                 <a aria-label="Power Vent Water Heaters" href="/products/power-vent-water-heaters/">Power Vent Water Heaters</a>
-                            </li>
+                            </li> */}
                             <li>
                                 <a aria-label="Tankless Water Heaters" href="/products/tankless-water-heaters/">Tankless Water Heaters</a>
                             </li>
